# infinito-nexus

./: .ansible-lint  .ansible-lint-ignore  .dockerignore  .gitignore  .mailmap  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE.md  MIRRORS  Makefile  README.md  SECURITY.md  SUPPORT.md  TODO.md  Todo.md  ansible.cfg  compose.yml  docker-compose.yml  env.ci  env.sample  eslint.config.js  index.rst  inventory.sample.yml  main.py  package-lock.json  package.json  playbook.yml  pyproject.toml  requirements.yml  skills-lock.json  tmp
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: agents.md  documentation.md  pipeline.md  server.md  system.md  workstation.md
.github/workflows/: TODO.md  _deploy-matrix.yml  _deploy-per-app.yml  build-ci-images.yml  cancel-pull-request-runs.yml  ci-nightly.yml  ci-orchestrator.yml  ci-pr.yml  ci-publish.yml  ci-push.yml  ci-schedule.yml  ci-version.yml  code-analyses.yml  codeql.yml  delete-branch.yml  dependabot-close.yml  entry-manual.yml  entry-nightly-latest.yml  entry-nightly-release.yml  entry-pull-request-cancel.yml  entry-pull-request-change.yml  entry-pull-request-required-push-checks.yml  entry-pull-request-target-build-ci-images.yml  entry-pull-request-target-mirror.yml  entry-pull-request.yml  entry-push-latest.yml  entry-push-version.yml  hadolint.yml  images-build-ci.yml  images-cleanup-ci.yml  images-mirror-all.yml  images-mirror-cleanup.yml  images-mirror-missing.yml  lint-ansible.yml  lint-docker.yml  lint-galaxy.yml  lint-javascript.yml  lint-makefile.yml  lint-markdown.yml  lint-python.yml  (+35 more)
cli/: __init__.py  __main__.py  deploy.py  make.py  vault.py
cli/administration/: README.md
cli/contributing/: README.md
cli/core/: app.py  colors.py  discovery.py  git.py  help.py  run.py  sounds.py
cli/create/: credentials.py  inventory.py  role.py
cli/deploy/: container.py  dedicated.py
cli/fix/: ini_py.py  move_unnecessary_dependencies.py  replace_by_get_app_config.sh  vars_main_files.py
cli/make/: __init__.py  __main__.py
cli/meta/: README.md
cli/mirror/: model.py  providers.py  util.py
cli/setup/: applications.py  users.py
cli/validate/: inventory.py
cli/vault/: __init__.py
compose/: .gitignore  Corefile  Corefile.tmpl  README.md  cache.override.yml
compose/coredns/: Corefile.tmpl  README.md
compose/package-cache/: README.md  apt.list  npmrc  pip.conf
compose/package-cache-frontend/: README.md  cert-gen.sh  upstreams.conf
compose/registry-cache/: README.md  proxy.conf
docs/: ARCHITECTURE.md  README.md
docs/administration/: deploy.md
docs/agents/: README.md  about.md  committing.md  debugging.md  development.md  ethics.md  help.md  pull-requests.md  purpose.md
docs/changelog/: 000.001.000-2025-12-09.md  000.001.001-2025-12-10.md  000.002.000-2025-12-10.md  000.002.001-2025-12-10.md  000.003.000-2025-12-17.md  000.003.001-2025-12-18.md  000.003.002-2025-12-19.md  000.003.003-2025-12-21.md  000.003.004-2025-12-21.md  000.003.005-2025-12-21.md  000.004.000-2025-12-29.md  000.005.000-2025-12-30.md  000.006.000-2025-12-31.md  000.007.000-2026-01-05.md  000.007.001-2026-01-06.md  000.007.002-2026-01-06.md  000.008.000-2026-01-06.md  000.009.000-2026-01-07.md  000.010.000-2026-01-08.md  000.011.000-2026-01-10.md  000.012.000-2026-01-25.md  001.000.000-2026-02-03.md  002.000.000-2026-02-08.md  002.001.000-2026-02-08.md  002.001.001-2026-02-08.md  002.001.002-2026-02-08.md  002.001.003-2026-02-08.md  002.001.004-2026-02-08.md  002.001.005-2026-02-09.md  002.001.006-2026-02-09.md  002.001.007-2026-02-09.md  002.001.008-2026-02-09.md  002.001.009-2026-02-10.md  003.000.000-2026-02-11.md  004.000.000-2026-02-13.md  004.000.001-2026-02-15.md  004.000.002-2026-02-15.md  README.md
docs/contributing/: README.md  architecture.md  (+15 more)
env/: ci.env  default.env  static.env
filter_plugins/: active_docker.py  alias_domains_map.py  applications_if_group_and_deps.py  canonical_domains_map.py  compose_volumes.py  csp_filters.py  docker_service_enabled.py  domain_redirect_mappings.py  domain_tools.py  dotenv.py  generate_all_domains.py  generate_base_sld_domains.py  get_all_application_ids.py  get_all_invokable_apps.py  get_app_conf.py  get_category_entries.py  get_deployment_types_from_groups.py  get_docker_image.py  get_docker_paths.py  get_domain.py  get_entity_name.py  get_service_name.py  get_service_script_path.py  get_url.py  has_domain.py  invokable_paths.py  jvm_filters.py  memory_filters.py  node_autosize.py  redirect_filters.py  reserved_users.py  resource_filter.py  ruby.py  safe_join.py  service_load_enabled.py  text_filters.py  timeout_start_sec_for_domains.py  tls.py  to_primary_domain.py  url_join.py
inventories/: README.md  dev.yml
lookup_plugins/: cert.py  cert_plan.py  colorscheme.py  command_path.py  compose_f_args.py  compose_file_args.py  config.py  container.py  database.py  docker.py  domain.py  local_mtime_qs.py  nginx.py  nginx_paths.py  tls.py  tls_resolve.py  unit_name.py  version.py
module_utils/: README.md  cert_utils.py  config_utils.py  docker_paths_utils.py  domain_mapper.py  domain_utils.py  entity_name_utils.py  get_url.py  invokable.py  jinja_strict.py  role_dependency_resolver.py  role_resource_validation.py  sounds.py  templating.py  tls_common.py  valid_deploy_id.py
packaging/: README.md
plugins/: README.md  __init__.py
requirements/: README.md  requirements.galaxy.yml  requirements.git.yml
roles/: categories.yml
scripts/: README.md  setup.sh
tasks/: README.md
templates/: README.md
tests/: README.md
utils/: README.md  __init__.py  cert_utils.py  config_utils.py  database_service.py  dict_renderer.py  docker_paths_utils.py  entity_name_utils.py  get_url.py  invokable.py  jinja_strict.py  role_resource_validation.py  runtime_lookup_data.py  service_registry.py  templating.py  tls_common.py  valid_deploy_id.py  yaml_cache.py
(+6234 files in other folders)
